2005-11-10  Julien MOUTTE  <julien@moutte.net>

	* flumotion/common/log.py:
	  log the correct end of the stack
	* flumotion/component/producers/firewire/firewire.xml:
	  add the dependency on the volume effect
	* flumotion/job/job.py:
	  add a fixme

2005-11-10  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/videotest/videotest.xml:
	  Don't have 'wizard' as a dependency, since no such bundle exists.
	  Prevents a warning when using videotest admin interface.

2005-11-10  Andy Wingo  <wingo@pobox.com>

	* flumotion/twisted/defer.py
	(defer_generator.wrapper.with_saved_callbacks): whoops, call with
	the right args

	* flumotion/test/test_defer.py (TestDefer.testExceptionChain): New
	test, checks that chained errbacks work. Won't actually error if
	the traceback-printing bug is hit, but you will see output.

	* flumotion/twisted/defer.py
	(defer_generator.wrapper.with_saved_callbacks): New procedure,
	executes its arguments with the deferred's callbacks set to what
	they were in the beginning. A bit hacky but the rationale is in
	the comments.
	(defer_generator.wrapper.default_errback): Add errbacks from
	within with_saved_callbacks.

	* flumotion/admin/text/view.py: Revert debugging commit.

2005-11-10  Michael Smith <msmith@fluendo.com>

	* flumotion/component/feedcomponent09.py:
	  Return true from buffer probe callback; this avoids dropping crucial
	  caps buffers on the floor.

2005-11-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/package.py:
	  have a logCategory
	* flumotion/job/job.py:
	* flumotion/worker/worker.py:
	  add some debug
	* flumotion/component/producers/soundcard/soundcard.xml:
	  fix the volume effect

2005-11-10  Andy Wingo  <wingo@pobox.com>

	* flumotion/launch/main.py (main): Print feed ports for debugging
	porpoises.

2005-11-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/worker.py:
	  Fix logging in jobs by correctly passing the environment
